<resources>
    <string name="app_name">DroneView</string>
    <string name="package_name">object.easyview.drone</string>
    <string name="app_type">2</string>
    <string name="search_port">8600</string>
    <string name="isBell">0</string>
    <string name="supportTUTK">0</string>
    <string name="server">EFGBFFBDKPILGKJDFJHPFAELGDNAHGMAHMFBBIDHAOJBLKKODOACDEPFGLKFIKLBADNJKKDJOLNLBNCKJMMI</string>
    <string name="softversion">2.0.1.1</string>
    <string name="softversion1">0.0.4.6</string>
    <string name="version_code">Version Number</string>
    <string name="version_code1">InternalVersion</string>
    <string name="soft_name">Software Name</string>
    <string name="str_ok">OK</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_delete">Delete</string>
    <string name="str_yes">Yes</string>
    <string name="str_no">No</string>
    <string name="exit_alert">are you sure to exit?</string>
    <string name="list_option">Options</string>
    <string name="connecting">Connecting...</string>
    <string name="init_network_error">init network failed</string>
    <string name="send_error">send failed</string>
    <string name="recv_error">recv failed</string>
    <string name="more_about_disclaimer">Declarement</string>
    <string name="more_about_version">Version</string>
    <string name="more_about_contact">Contact</string>
    <string name="disclaimer_conent">CopyRight 2014, All Right Reserved ,SHENZHEN EasyView TECHNOLOGY LTD.</string>
    <string name="version_conent">V 0.0.0.1</string>
    <string name="contact_me">Website : http://www.object-camera.com Support: support@object-camera.com</string>
    <string name="pwd_no_empty">The password cannot for empty</string>
    <string name="app_running">running</string>
    <string name="show_t_xxx">Please click the button on the left to open this function</string>
    <string name="missed">missed</string>
    <string name="cleaning_storage">cleaning storage</string>
    <string name="str_version">Version</string>
    <string name="str_url">www.bellandwyson.com</string>
    <string name="welcometo">WELCOME TO</string>
    <string name="str_company">Bell&amp;Wyson</string>
    <string name="str_agree">Agree on Terms and conditions</string>
    <string name="license_title">License Title</string>
    <string name="str_accept">Accept</string>
    <string name="code">Wait...</string>
    <string name="connect_AP">Connected Device AP！！！</string>
    <string name="not_find_AP">Not Find AP！！！</string>
    <string name="code_success">Code Success！！！</string>
    <string name="device_search_faile">Search Fail！！！</string>
    <string name="code_faile">Code Fail！！！</string>
    <string name="delete_camera">Delete</string>
    <string name="del_alert">Are you sure to delete?</string>
    <string name="str_add">Add</string>
    <string name="str_about">About</string>
    <string name="connect_failed">connect failed</string>
    <string name="unknow_error">unknown error</string>
    <string name="string_about">About Us</string>
    <string name="camera_type">Camera Type</string>
    <string name="device_id_name">ID:</string>
    <string name="device_type_name">Type:</string>
    <string name="device_status_name">Status:</string>
    <string name="pppp_status_unknown">unknown</string>
    <string name="pppp_status_connecting">Connecting</string>
    <string name="pppp_status_initialing">connected, initialing</string>
    <string name="pppp_status_online">on line</string>
    <string name="pppp_status_disconnect">disconnect</string>
    <string name="pppp_status_connect_failed">connect failed</string>
    <string name="pppp_status_invalid_id">invalid id</string>
    <string name="pppp_dev_type_unknown">unknown type</string>
    <string name="device_not_on_line">off line</string>
    <string name="pppp_mode">Mode:</string>
    <string name="pppp_mode_p2p_normal">p2p connected</string>
    <string name="pppp_mode_p2p_relay">p2p relay</string>
    <string name="pppp_mode_unknown">unknown</string>
    <string name="pppp_status_connect_timeout">Connecting timeout</string>
    <string name="password">Old Password:</string>
    <string name="newpassword">New Password:</string>
    <string name="cfm_password">Confirm Password:</string>
    <string name="showpwd">Show Password</string>
    <string name="connected">Connected</string>
    <string name="camera_not_online">Camera is not online</string>
    <string name="main_tap_here_add_vidicon">Add new camera</string>
    <string name="main_tap_here_add_bell">Add Device</string>
    <string name="back">Back</string>
    <string name="done">Done</string>
    <string name="clear">clear</string>
    <string name="time">Time：</string>
    <string name="event">Activity：</string>
    <string name="main_select_all">Select All</string>
    <string name="main_select_reverse">Select Inverse</string>
    <string name="main_edit">Edit</string>
    <string name="main_check">Check</string>
    <string name="main_vidicon">Camera</string>
    <string name="main_bell">Device</string>
    <string name="main_alarm_event">Alarm Event</string>
    <string name="main_pic">Photos</string>
    <string name="main_vid">Videos</string>
    <string name="main_remote">Remote</string>
    <string name="main_phone">Phone</string>
    <string name="main_setting_prompt">Camera is offline,so cannot setting</string>
    <string name="exit">Exit</string>
    <string name="main_alarm">Alarm</string>
    <string name="main_event">Activity</string>
    <string name="main_more">More</string>
    <string name="main_plea_addcam">Please first add camera</string>
    <string name="main_not_administrator">The User is not a administrator</string>
    <string name="main_show_back">Press once again,run in backgound</string>
    <string name="main_show_quit">Press once again,quit</string>
    <string name="no_device_tip">Please add device</string>
    <string name="four_show_back">Press again, exit four picture playback!</string>
    <string name="txtHumidity">Humidity:</string>
    <string name="txtTemperature">Temperature:</string>
    <string name="txtBodyTemperature">BodyTemperature:</string>
    <string name="txtVoltage">Voltage:</string>
    <string name="add_camera">Add Camera</string>
    <string name="edit_camera">Modify device</string>
    <string name="camera_name">Device Name</string>
    <string name="camera_addr">Ip Address</string>
    <string name="camera_port">Port</string>
    <string name="camera_user">User</string>
    <string name="camera_pwd">Password</string>
    <string name="input_camera_name">please input the camera name</string>
    <string name="input_camera_addr">please input the ip address</string>
    <string name="input_camera_port">please input the port</string>
    <string name="input_camera_user">please input the user name</string>
    <string name="edit">Edit</string>
    <string name="camera_id">Device ID</string>
    <string name="input_camera_id">please input the camera id</string>
    <string name="scan_cameraid">Scan ID</string>
    <string name="scan_cameraid_fail">Scan failed,please try again</string>
    <string name="add_search_result">Search Result</string>
    <string name="add_search_no">Search failed,please try again...</string>
    <string name="add_twodimensioncode">Starting two dimension code program...</string>
    <string name="add_camer_no_add">The cameras already reach maximum!</string>
    <string name="preset_show">Preset</string>
    <string name="preset_call">Preset a call</string>
    <string name="preset_set">Preset a set</string>
    <string name="h264_highest">Highest</string>
    <string name="h264_high">High</string>
    <string name="h264_middle">Middle</string>
    <string name="h264_low">Low</string>
    <string name="h264_lowest">Lowest</string>
    <string name="show_online">Online</string>
    <string name="show_lan">LAN</string>
    <string name="show_temp">TEMP：</string>
    <string name="show_fahrenheit">Fahrenheit：</string>
    <string name="show_heartrate">Heartrate：</string>
    <string name="show_rec">REC：</string>
    <string name="show_online_num">Online Num：</string>
    <string name="show_frame_ration">Frame Ratio：</string>
    <string name="live_view_title">Live</string>
    <string name="txtStartSpeak">Push for speak</string>
    <string name="txtStopSpeak">Release for stop speak</string>
    <string name="search_camera">Search Camera</string>
    <string name="searching_tip">Searching,please wait...</string>
    <string name="str_search">Lan Search</string>
    <string name="str_WiFi_search">Device Initial WiFi Setting</string>
    <string name="setting_tip">Setting,please wait...</string>
    <string name="refresh">Refresh</string>
    <string name="setting">Settings</string>
    <string name="setting_camera">Camera Setting</string>
    <string name="setting_wifi">WiFi Settings</string>
    <string name="setting_user">User Settings</string>
    <string name="setting_ftp">Ftp Settings</string>
    <string name="setting_alerm">Motion Settings</string>
    <string name="setting_time">Time Settings</string>
    <string name="setting_sdcard">TF Settings</string>
    <string name="setting_ioswitch">Switch Control</string>
    <string name="setting_share">Share the camera</string>
    <string name="selectsharemode">Please select the mode of sharing</string>
    <string name="sharemode_text">Text share UID</string>
    <string name="sharemode_photo">Photo sharing UID</string>
    <string name="setting_mail">Mail Setting</string>
    <string name="setting_threshold">Threshold Setting</string>
    <string name="setting_open_lock">Unlock Settings</string>
    <string name="setting_lcd_ctrl">LCD Settings</string>
    <string name="setting_ap">AP setting</string>
    <string name="setting_ap_ssid">SSID：</string>
    <string name="setting_ap_pwd">Pwd：</string>
    <string name="setting_ap_show">SSID or password can not be empty</string>
    <string name="wifi">Wifi</string>
    <string name="wifi_manager">WiFi Search</string>
    <string name="wifi_channel">Channel:</string>
    <string name="wifi_channel_show">The channel number can not be empty</string>
    <string name="wifi_signal_strong">Wifi Signal</string>
    <string name="wifi_safe">Security</string>
    <string name="wifi_no_safe">No</string>
    <string name="wifi_set_failed">WiFi Setting Failed</string>
    <string name="wifi_set_success">Password setting correct. Device is rebooting</string>
    <string name="wifi_not_connected">WiFi not connected</string>
    <string name="wifi_scanning">WLAN Scanning,Please waiting...</string>
    <string name="wifi_scan_failed">WiFi Scan Failed</string>
    <string name="mail_163">smtp.163.com</string>
    <string name="mail_126">smtp.126.com</string>
    <string name="mail_sina">smtp.sina.com</string>
    <string name="mail_sohu">smtp.sohu.com</string>
    <string name="mail_tom">smtp.tom.com</string>
    <string name="mail_21cn">smtp.21cn.com</string>
    <string name="mail_qq">smtp.qq.com</string>
    <string name="mail_gmail">smtp.gmail.com</string>
    <string name="alerm_sensitive_optimal">Optimal</string>
    <string name="alerm_sensitive_excellent">High</string>
    <string name="alerm_sensitive_good">Middle</string>
    <string name="alerm_sensitive_general">Low</string>
    <string name="localpic_no">No Photos</string>
    <string name="current_wifi">The current network:</string>
    <string name="wifi_password">Wifi Password:</string>
    <string name="device_init_config">Settings</string>
    <string name="dev_init_tip">Please make sure that the camera has a flash blue light, If not,push the reset button (more than 2s) to restart the camera.Note:Before adding the camera,your phone must connect with your WIFI network.</string>
    <string name="dialog_DeviceInitSetting">Device Initial Wi-Fi Setting</string>
    <string name="imgDesc_SplitLine">SplitLine</string>
    <string name="cancel">Cancel</string>
</resources>