<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" style="@style/main_bg_style"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <android.support.v4.view.ViewPager android:id="@id/pager" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <LinearLayout android:gravity="center" android:layout_width="fill_parent" android:layout_height="@dimen/title_layout_height" style="@style/top_bg_style">
        <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="@color/color_white" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/string_about" android:shadowColor="@color/color_shadow" android:shadowDx="1.0" android:shadowDy="1.0" android:shadowRadius="1.0" />
    </LinearLayout>
    <ScrollView android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0" style="@style/scroll_layout_style">
        <LinearLayout android:orientation="vertical" android:paddingLeft="10.0dip" android:paddingTop="10.0dip" android:paddingRight="10.0dip" android:paddingBottom="15.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/soft_name" style="@style/about_title_style" />
                <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/app_name" style="@style/about_content_style" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
                <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/version_code" style="@style/about_title_style" />
                <TextView android:id="@id/txtVersion" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/softversion" style="@style/about_content_style" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="30.0dip">
                <TextView android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/version_code1" style="@style/about_title_style" />
                <TextView android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/softversion1" style="@style/about_content_style" />
                <ProgressBar android:layout_gravity="center_vertical" android:id="@id/clearProgressBar" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:max="1000" android:progress="1" android:indeterminate="false" style="?android:attr/progressBarStyleHorizontal" />
                <Button android:textSize="20.0dip" android:textColor="@color/main_text_color" android:id="@id/clear_mem" android:background="@drawable/btn_selector" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="40.0dip" android:text="@string/cleaning_storage" />
                <Button android:textSize="20.0dip" android:textColor="@color/main_text_color" android:id="@id/outButton" android:background="@drawable/btn_selector" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginTop="10.0dip" android:text="@string/exit" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>