<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/color_black" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:gravity="center" android:id="@id/ptz_resolution_h264_highest" android:layout_width="fill_parent" android:layout_height="40.0dip" android:text="@string/h264_highest" />
    <ImageView android:id="@id/imageView1" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:src="@color/color_line" />
    <TextView android:gravity="center" android:id="@id/ptz_resolution_h264_high" android:layout_width="fill_parent" android:layout_height="40.0dip" android:text="@string/h264_high" />
    <ImageView android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:src="@color/color_line" />
    <TextView android:gravity="center" android:id="@id/ptz_resolution_h264_middle" android:layout_width="fill_parent" android:layout_height="40.0dip" android:text="@string/h264_middle" />
    <ImageView android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:src="@color/color_line" />
    <TextView android:gravity="center" android:id="@id/ptz_resolution_h264_low" android:layout_width="fill_parent" android:layout_height="40.0dip" android:text="@string/h264_low" />
    <ImageView android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:src="@color/color_line" />
    <TextView android:gravity="center" android:id="@id/ptz_resolution_h264_lowest" android:layout_width="fill_parent" android:layout_height="40.0dip" android:text="@string/h264_lowest" />
    <ImageView android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:src="@color/color_line" />
</LinearLayout>