<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:id="@id/device_init_settings_title" android:background="@drawable/top" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="24.0sp" android:textColor="#ffffffff" android:gravity="center" android:layout_gravity="center" android:id="@id/device_init_settings_title_title_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dialog_DeviceInitSetting" />
    </FrameLayout>
    <ScrollView android:background="#ffadd8e6" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="0.0dip">
            <LinearLayout android:orientation="vertical" android:background="@drawable/background_white_corner" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true">
                    <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dev_init_tip" />
                </LinearLayout>
                <ImageView android:background="#ffeeeeee" android:layout_width="fill_parent" android:layout_height="0.70000005dip" android:layout_marginBottom="15.0dip" android:contentDescription="@string/imgDesc_SplitLine" />
                <LinearLayout android:id="@id/linearLayout2" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/current_wifi" />
                    <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/tvSSID" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="" />
                </LinearLayout>
                <LinearLayout android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/wifi_password" />
                    <EditText android:textSize="16.0sp" android:id="@id/edit_password" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" android:layout_weight="1.0" style="@android:style/Widget.TextView">
                        <requestFocus />
                    </EditText>
                </LinearLayout>
                <RelativeLayout android:id="@id/relativeLayout2" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <ProgressBar android:id="@id/progressBar1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" style="?android:attr/progressBarStyleLarge" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout android:gravity="center_vertical" android:background="@drawable/background_silver" android:layout_width="fill_parent" android:layout_height="60.0dip">
        <Button android:id="@id/btnOK" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="3.0dip" android:layout_marginTop="5.0dip" android:layout_marginBottom="3.0dip" android:text="@string/device_init_config" android:layout_weight="1.0" />
        <Button android:id="@id/btnCancel" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="5.0dip" android:layout_marginRight="3.0dip" android:layout_marginBottom="3.0dip" android:text="@string/cancel" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>