<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" style="@style/normal_bg_style"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:gravity="center_vertical" android:id="@id/top" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" style="@style/top_bg_style">
        <ImageButton android:textSize="@dimen/text_title_size" android:textColor="@color/color_white" android:id="@id/back" android:background="@drawable/btn_back_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:src="@drawable/back_32" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
        <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="@color/color_white" android:layout_gravity="center_vertical" android:id="@id/tv_time" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/setting" android:shadowColor="@color/color_shadow" android:shadowDx="1.0" android:shadowDy="1.0" android:shadowRadius="1.0" android:layout_centerInParent="true" />
        <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="@color/color_white" android:layout_gravity="center_vertical" android:id="@id/tv_select_sum" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:shadowColor="@color/color_shadow" android:shadowDx="1.0" android:shadowDy="1.0" android:shadowRadius="1.0" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        <Button android:textColor="@color/color_white" android:id="@id/edit" android:background="@drawable/btnselector" android:visibility="gone" android:layout_width="50.0dip" android:layout_height="40.0dip" android:layout_margin="5.0dip" android:text="@string/main_edit" android:layout_alignParentRight="true" />
    </RelativeLayout>
    <LinearLayout android:id="@id/del_bottom_layout" android:background="@drawable/main_bottom_bg" android:padding="5.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_alignParentBottom="true">
        <Button android:textColor="@color/color_white" android:id="@id/selectall" android:background="@drawable/add_btn_selector" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginRight="5.0dip" android:text="@string/main_select_all" android:layout_weight="1.0" />
        <Button android:textColor="@color/color_white" android:id="@id/selectreverse" android:background="@drawable/add_btn_selector" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginRight="5.0dip" android:text="@string/main_select_reverse" android:layout_weight="1.0" />
        <Button android:textColor="@color/color_white" android:id="@id/delete" android:background="@drawable/add_btn_selector" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/delete_camera" android:layout_weight="1.0" />
    </LinearLayout>
    <GridView android:gravity="center" android:id="@id/gridView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:listSelector="@drawable/listitem_bg_selector" android:horizontalSpacing="5.0dip" android:verticalSpacing="5.0dip" android:stretchMode="columnWidth" android:columnWidth="110.0dip" android:numColumns="auto_fit" android:layout_above="@id/del_bottom_layout" android:layout_below="@id/top" />
    <TextView android:textSize="24.0sp" android:textColor="@color/color_white" android:gravity="center_vertical" android:id="@id/localpic_tv_nopic" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/localpic_no" android:layout_centerInParent="true" />
</RelativeLayout>