<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/color_white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:layout_gravity="center" android:id="@id/top" android:layout_width="fill_parent" android:layout_height="50.0dip" style="@style/top_bg_style">
        <Button android:textColor="@color/color_white" android:gravity="center" android:id="@id/check_alarm_event" android:background="@drawable/checktopleft_pressed" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/main_alarm_event" />
        <Button android:textColor="@color/color_white" android:gravity="center" android:id="@id/check_pic" android:background="@drawable/checkmiddle_normal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/main_pic" />
        <Button android:textColor="@color/color_white" android:gravity="center" android:id="@id/check_vid" android:background="@drawable/checkright_normal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/main_vid" />
    </LinearLayout>
    <ListView android:id="@id/checklistview" android:background="#00000000" android:fadingEdge="none" android:layout_width="fill_parent" android:layout_height="wrap_content" android:listSelector="@drawable/listitem_pressed_selector" android:cacheColorHint="#00000000" android:divider="@color/color_divider" android:dividerHeight="1.0dip" android:fastScrollEnabled="true" android:fadeScrollbars="true" />
</LinearLayout>